# chroma

./: .clang-format  CMakeLists.txt  LICENSE  license.md  readme.md
src/: chroma.hh  main.cc  math.hh  type.hh
